--- a/src/Pokecard/Pokecard.styles.css
+++ b/src/Pokecard/Pokecard.styles.css
@@ -1,13 +1,34 @@
 .Pokecard {
   width: 250px;
-  height: 300px;
-  padding: 15px;
+  height: 260px;
+  padding: 13px;
   margin: 1rem;
   box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
   background-color: white;
   border-radius: 3px;
+  margin-bottom: 2rem;
 }
 
 .Pokecard-data {
   font-size: 80%;
+}
+
+.Pokecard-title {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.Pokecard-image {
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  background-color: #eceff1;
+  border-radius: 3px;
+  margin-bottom: 0.6rem;
+  margin-top: 0.5rem;
+}
+
+.Pokecard-image:hover {
+  transform: scale(1.1);
+  opacity: 0.7;
 }
